fix(oui-tile): add spacing for actions

--- a/packages/oui-tile/_variables.less
+++ b/packages/oui-tile/_variables.less
@@ -15,3 +15,4 @@
 @oui-tile-definition-term-font-size: rem-calc(14);
 @oui-tile-definition-description-color: @oui-color-rhino;
 @oui-tile-definition-description-font-size: rem-calc(16);
+@oui-tile-definition-actions-spacing: rem-calc(10);
