--- a/packages/oui-tile/tile.less
+++ b/packages/oui-tile/tile.less
@@ -76,6 +76,10 @@
     flex: 1;
   }
 
+  &__definition + &__actions {
+    margin-left: @oui-tile-definition-actions-spacing;
+  }
+
   &__term {
     color: @oui-tile-definition-term-color;
     font-size: @oui-tile-definition-term-font-size;
